--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,3 +41,5 @@ git commit -m "first commit"
 git branch -M main
 git remote add origin https://github.com/Shimate96/StockPilot.git
 git push -u origin main
+git pull origin main
+git push origin main
