--- a/stockflow-app/package.json
+++ b/stockflow-app/package.json
@@ -12,20 +12,20 @@
   },
   "dependencies": {
     "expo": "^49.0.0",
-    "expo-camera": "^13.4.0",
-    "expo-barcode-scanner": "^12.4.0",
+    "expo-camera": "~13.4.4",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-notifications": "^0.20.0",
-    "expo-device": "^5.4.0",
+    "expo-device": "~5.4.0",
     "expo-splash-screen": "^0.20.5",
-    "expo-status-bar": "^1.6.0",
+    "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
-    "react-native": "^0.72.4",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "^3.3.0",
+    "react-native-reanimated": "~3.3.0",
     "@react-navigation/native-stack": "^6.9.12",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.22.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/drawer": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "@types/react": "^18.2.31",
+    "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
     "typescript": "^5.2.2"
   }
